# ezbolt

./: LICENSE  README.md  generate_cu_table.py  main.py  pyproject.toml  requirements.txt  validation_examples.py
Cu Coefficient Table/: README.md
doc/: main_anim.py  scratchbook.xlsx
ezbolt/: __init__.py  bolt.py  boltgroup.py  plotter.py
